  * Add dcraw to Depends, since this tool is needed, although not
    mentioned as a dependency in the upstream docs. Thanks to fabo
    again.
  * Add patch to disable some (new) default optimisations: openmp and
    sse2, because I'm not sure they are available on all platforms:
     - 50_disable_opts
  * debian/control:
     - Update Standards-Version from 3.8.0 to 3.8.1 (no changes needed).

  [ Fathi Boudra ]
  * Add patch to fix documentation search path on Debian system:
     - 30_fix_documentation_search_path
  * Add patch to fix desktop file icon (Closes: #509305):
     - 40_fix_desktop_file_icon

 -- Cyril Brulebois <kibi@debian.org>  Sun, 07 Jun 2009 11:56:48 +0200

qtpfsgui (1.9.2-1) experimental; urgency=low

  * New upstream release.
  * debian/copyright:
     - Update accordingly.
     - Update my mail address, copyright years.
  * debian/control:
     - Update my mail address.
     - Bump Standards-Version from 3.7.3 to 3.8.0 (no changes needed).

 -- Cyril Brulebois <kibi@debian.org>  Mon, 01 Dec 2008 04:32:14 +0100

qtpfsgui (1.9.1-1) unstable; urgency=low

  * New upstream release.
  * Drop merged-upstream (or cherrypicked-from-upstream) patches:
     - 30_align_image_stack_prefix.
     - 40_fix_exiv2_encoding_support.

 -- Cyril Brulebois <cyril.brulebois@enst-bretagne.fr>  Fri, 07 Mar 2008 23:23:55 +0100

qtpfsgui (1.9.0-3) unstable; urgency=low

  * Add patch to fix encoding troubles with operations on exiv2 data,
    cherry-picked from upstream, revision 262 (Closes: #460718):
     - 40_fix_exiv2_encoding_support.

 -- Cyril Brulebois <cyril.brulebois@enst-bretagne.fr>  Tue, 05 Feb 2008 22:01:58 +0100

qtpfsgui (1.9.0-2) unstable; urgency=low

  * Special thanks to Julien Valroff, who reported the following bugs,
    along with some patches.
  * Added patch to allow the use of Hugin's align_image_stack again; its
    inclusion is pending upstream (Closes: #460716):
     - 30_align_image_stack_prefix.