@@ -3,7 +3,7 @@ Section: graphics
 Priority: extra
 Maintainer: Debian PhotoTools Maintainers <pkg-phototools-devel@lists.alioth.debian.org>
 Uploaders: Cyril Brulebois <kibi@debian.org>
-Build-Depends: debhelper (>= 5), cdbs, quilt, libqt4-dev, libexiv2-dev, libfftw3-dev, libopenexr-dev, libtiff4-dev
+Build-Depends: debhelper (>= 7.0.50), quilt, libqt4-dev, libexiv2-dev, libfftw3-dev, libopenexr-dev, libtiff4-dev
 Standards-Version: 3.8.1
 Homepage: http://qtpfsgui.sourceforge.net/
 Vcs-Browser: http://git.debian.org/?p=pkg-phototools/qtpfsgui.git
